--- a/webapp/src/ionicapp/www/templates/addI2CDevice.html
+++ b/webapp/src/ionicapp/www/templates/addI2CDevice.html
@@ -13,7 +13,7 @@
       </p>
     </div>
     <div id="addI2CDevice-markdown35" class="show-list-numbers-and-dots">
-      <p style="color:#000000;">Manufacturer</p>
+      <p style="color:#387EF5;">Manufacturer</p>
     </div>
     <form id="addI2CDevice-form17" class="list">
       <label class="item item-select" id="addI2CDevice-select16">
@@ -25,7 +25,7 @@
       <hr>
     </div>
     <div id="addI2CDevice-markdown48" class="show-list-numbers-and-dots">
-      <p style="color:#000000;">Device Models</p>
+      <p style="color:#387EF5;">Device Models</p>
     </div>
     <form id="addI2CDevice-form39" class="list" ng-show="data.i2c.manufacturerid==0">
       <label class="item item-select" id="addI2CDevice-select19">
