--- a/webapp/src/ionicapp/www/templates/deviceGPIO.html
+++ b/webapp/src/ionicapp/www/templates/deviceGPIO.html
@@ -20,30 +20,32 @@
         <button id="deviceGPIO-button63" ng-click="changeSection(4)" ng-class="{'active': data.activeSection==4}" class="button button-positive button-small button-block">GPIO 4</button>
       </div>
       <ion-toggle toggle-class="toggle-positive" id="deviceGPIO-toggle4" ng-model="data.enableGPIO" ng-change="changeGPIO(data.enableGPIO)">Enable</ion-toggle>
+      <div class="spacer" style="width: 300px; height: 20px;"></div>
       <label class="item item-select" id="deviceGPIO-select15">
         <span class="input-label">Voltage</span>
         <select ng-model="data.voltageidx" ng-options="voltage.id as voltage.label for voltage in voltages"></select>
       </label>
-      <div id="deviceGPIO-markdown25" class="show-list-numbers-and-dots">
-        <hr>
+      <div class="spacer" style="width: 300px; height: 20px;"></div>
+      <div id="deviceGPIO-markdown124" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Properties</p>
       </div>
       <label class="item item-select" id="deviceGPIO-select12">
         <span class="input-label">Direction</span>
         <select ng-model="data.gpio.direction" ng-options="direction.id as direction.label for direction in directions"></select>
       </label>
     </form>
-    <form id="deviceGPIO-form44" class="list" ng-show="data.gpio.direction==0">
+    <form id="deviceGPIO-form46" class="list" ng-show="data.gpio.direction==0">
       <label class="item item-select" id="deviceGPIO-select13">
         <span class="input-label">Mode</span>
         <select ng-model="data.gpio.mode" ng-options="mode.id as mode.label for mode in modes_input"></select>
       </label>
     </form>
-    <form id="deviceGPIO-form46" class="list" ng-show="data.gpio.direction==1">
-      <label class="item item-select" id="deviceGPIO-select11">
+    <form id="deviceGPIO-form90" class="list" ng-show="data.gpio.direction==1">
+      <label class="item item-select" id="deviceGPIO-select39">
         <span class="input-label">Mode</span>
         <select ng-model="data.gpio.mode" ng-options="mode.id as mode.label for mode in modes_output"></select>
       </label>
-      <label class="item item-select" id="deviceGPIO-select17">
+      <label class="item item-select" id="deviceGPIO-select40">
         <span class="input-label">Polarity</span>
         <select ng-model="data.gpio.polarity" ng-options="polarity.id as polarity.label for polarity in polarities"></select>
       </label>
@@ -65,21 +67,27 @@
       </label>
     </form>
     <form id="deviceGPIO-form37" class="list" ng-show="data.gpio.direction==0">
+      <div id="deviceGPIO-markdown121" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Alert</p>
+      </div>
       <label class="item item-select" id="deviceGPIO-select14">
-        <span class="input-label">Alert</span>
+        <span class="input-label">Type</span>
         <select ng-model="data.gpio.alert" ng-options="alert.id as alert.label for alert in alerts"></select>
       </label>
       <label class="item item-input" id="deviceGPIO-input70">
-        <span class="input-label">Alert every</span>
-        <input type="number" placeholder="Seconds" ng-model="data.gpio.alertperiod">
+        <span class="input-label">Period (milliseconds)</span>
+        <input type="number" placeholder="" ng-model="data.gpio.alertperiod">
       </label>
     </form>
     <form id="deviceGPIO-form47" class="list">
-      <ion-toggle toggle-class="toggle-positive" id="deviceGPIO-toggle14" ng-change="changeNotification(data.showNotification)" ng-model="data.showNotification">Show Notification Settings</ion-toggle>
+      <div id="deviceGPIO-markdown118" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Notification settings</p>
+      </div>
+      <ion-toggle toggle-class="toggle-positive" id="deviceGPIO-toggle14" ng-change="changeNotification(data.showNotification)" ng-model="data.showNotification">Show</ion-toggle>
     </form>
     <form id="deviceGPIO-form56" class="list" ng-show="data.showNotification==1">
       <div id="deviceGPIO-markdown19" class="show-list-numbers-and-dots">
-        <p style="color:#000000;">Messages</p>
+        <p style="color:#387EF5;">Messages</p>
       </div>
       <ion-checkbox id="deviceGPIO-checkbox9" ng-model="data.gpio.notification.messages[0].enable">Message on activation</ion-checkbox>
       <label class="item item-input" id="deviceGPIO-textarea5">
@@ -90,26 +98,20 @@
     </form>
     <form id="deviceGPIO-form48" class="list" ng-show="data.showNotification==1">
       <div id="deviceGPIO-markdown59" class="show-list-numbers-and-dots">
-        <p style="color:#000000;">Recipients</p>
+        <p style="color:#387EF5;">Recipients</p>
       </div>
       <ion-checkbox id="deviceGPIO-checkbox5" ng-model="data.gpio.notification.endpoints.email.enable">Send email to </ion-checkbox>
       <label class="item item-input" id="deviceGPIO-input71">
         <input type="email" placeholder="Email address(es)" ng-model="data.gpio.notification.endpoints.email.recipients" readonly="">
       </label>
-    </form>
-    <form id="deviceGPIO-form49" class="list" ng-show="data.showNotification==1">
       <ion-checkbox id="deviceGPIO-checkbox6" ng-model="data.gpio.notification.endpoints.mobile.enable">Send SMS to </ion-checkbox>
       <label class="item item-input" id="deviceGPIO-input72">
         <input type="tel" placeholder="Phone number(s)" ng-model="data.gpio.notification.endpoints.mobile.recipients" readonly="">
       </label>
-    </form>
-    <form id="deviceGPIO-form50" class="list" ng-show="data.showNotification==1">
       <ion-checkbox id="deviceGPIO-checkbox7" ng-model="data.gpio.notification.endpoints.notification.enable">Send notification to </ion-checkbox>
       <label class="item item-input" id="deviceGPIO-input73">
         <input type="tel" placeholder="Phone number(s)" ng-model="data.gpio.notification.endpoints.notification.recipients" readonly="">
       </label>
-    </form>
-    <form id="deviceGPIO-form51" class="list" ng-show="data.showNotification==1">
       <ion-checkbox id="deviceGPIO-checkbox8" ng-model="data.gpio.notification.endpoints.modem.enable">Send to IoT Modem</ion-checkbox>
       <label class="item item-input" id="deviceGPIO-input74">
         <input type="text" placeholder="Device name(s)" ng-model="data.gpio.notification.endpoints.modem.recipients">
