--- a/webapp/src/ionicapp/www/templates/light.html
+++ b/webapp/src/ionicapp/www/templates/light.html
@@ -55,11 +55,11 @@
       </div>
       <label class="item item-select" id="light-select42">
         <span class="input-label">IoT Modem</span>
-        <select></select>
+        <select ng-options="device.id as device.devicename for device in devices" ng-model="data.hardware_devicename" ng-change="changeDevice()"></select>
       </label>
       <label class="item item-select" id="light-select43">
         <span class="input-label">I2C Device</span>
-        <select></select>
+        <select ng-options="i2cdevice.id as i2cdevice.sensorname for i2cdevice in i2cdevices" ng-model="data.hardware_sensorname"></select>
       </label>
     </form>
     <form id="light-form97" class="list">
