Add GET UARTS/I2CS and update enable/d parameter in ENABLE/DISABLE UART/GPIO/I2C and GET GPIOS
1. Add GET UARTS/I2CS in the same aspect as GET GPIOS for getting enabled status
2. Update ENABLE/DISABLE UART/GPIO/I2C and GET GPIOS to use int instead of bool for enable/d parameter

--- a/webapp/src/ionicapp/www/templates/addI2CDevice.html
+++ b/webapp/src/ionicapp/www/templates/addI2CDevice.html
@@ -12,6 +12,12 @@
         <strong> {{ data.devicename }} </strong>
       </p>
     </div>
+    <div id="addI2CDevice-markdown136" style="text-align:center;" class="show-list-numbers-and-dots">
+      <p style="color:#444444;font-size:18px;">
+        <strong> I2C {{ data.i2cnumber }} </strong>
+      </p>
+    </div>
+    <div class="spacer" style="width: 300px; height: 10px;"></div>
     <div id="addI2CDevice-markdown35" class="show-list-numbers-and-dots">
       <p style="color:#387EF5;">Manufacturer</p>
     </div>
