--- a/webapp/src/ionicapp/www/templates/addI2CDeviceDetails.html
+++ b/webapp/src/ionicapp/www/templates/addI2CDeviceDetails.html
@@ -13,6 +13,12 @@
           <strong> {{ data.devicename }} </strong>
         </p>
       </div>
+      <div id="addI2CDeviceDetails-markdown137" style="text-align:center;" class="show-list-numbers-and-dots">
+        <p style="color:#444444;font-size:18px;">
+          <strong> I2C {{ data.i2cnumber }} </strong>
+        </p>
+      </div>
+      <div class="spacer" style="width: 300px; height: 10px;"></div>
       <div id="addI2CDeviceDetails-markdown60" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Manufacturer</p>
       </div>
@@ -21,7 +27,6 @@
           <strong> {{ data.i2c.manufacturer }} </strong>
         </p>
       </div>
-      <div class="spacer" style="height: 15px;"></div>
       <div id="addI2CDeviceDetails-markdown67" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Device Model</p>
       </div>
@@ -29,20 +34,28 @@
         <p style="color:#444444;font-size:18px;">
           <strong> {{ data.i2c.model }} </strong> ({{ data.i2c.name }})</p>
       </div>
+      <div id="addI2CDeviceDetails-markdown138" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Device Description</p>
+      </div>
       <div id="addI2CDeviceDetails-markdown9" class="show-list-numbers-and-dots">
-        <p style="color:#444444;font-size:12px;">{{ data.i2c.desc }}</p>
+        <p style="color:#444444;font-size:18px;">{{ data.i2c.desc }}</p>
+      </div>
+      <div id="addI2CDeviceDetails-markdown139" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Device Link</p>
       </div>
       <div id="addI2CDeviceDetails-markdown33" class="show-list-numbers-and-dots">
-        <p style="color:#444444;font-size:12px;">{{ data.i2c.link }}</p>
+        <p style="color:#444444;font-size:18px;">{{ data.i2c.link }}</p>
+      </div>
+      <div id="addI2CDeviceDetails-markdown140" class="show-list-numbers-and-dots">
+        <p style="color:#387EF5;">Device Class</p>
       </div>
       <div id="addI2CDeviceDetails-markdown133" class="show-list-numbers-and-dots">
-        <p style="color:#444444;font-size:12px;">{{ data.i2c.class }}</p>
+        <p style="color:#444444;font-size:18px;">{{ data.i2c.class }}</p>
       </div>
     </form>
     <div id="addI2CDeviceDetails-markdown70" class="show-list-numbers-and-dots">
       <hr>
     </div>
-    <div class="spacer" style="width: 300px; height: 15px;"></div>
     <form id="addI2CDeviceDetails-form64" class="list">
       <div id="addI2CDeviceDetails-markdown21" class="show-list-numbers-and-dots">
         <p style="color:#387EF5;">Provide the details below</p>
